# digimuh

./: .gitignore  README.md  Tierauswahl_extended.xlsx  config.yaml.example  environment.yml  pyproject.toml
.github/workflows/: docs.yml  release.yml  tests.yml
docs/: analysis_00_methods.md  column_dictionary.md  conf.py  database_structure.md  index.rst  milk_yield_classification_prompt.md  pipeline.md  requirements.txt  validation_report_2026-03-31.md
docs/api/: modules.rst
scripts/: db_check_and_count.sh  find_overlooked_gouna.py  ingest_gouna.py  recover_and_index.py  run_00_broken_stick_ana.sh  run_frontiers_2026.sh  setup_new_machine.sh
src/digimuh/: __init__.py  __main__.py  analysis_00_broken_stick.py  analysis_00a_extract.py  analysis_00b_stats.py  analysis_00c_plots.py  analysis_01_ketosis.py  analysis_03_heat_stress.py  analysis_06_digestive.py  analysis_11_circadian.py  analysis_12_motility_entropy.py  analysis_utils.py  config.py  console.py  constants.py  create_views.sql  extract.py  fitting.py  ingest_cow_db.py  milk_yield_classification.py  paths.py  run_frontiers_2026.py  stats_core.py  stats_lactation_curve.py  stats_longitudinal.py  stats_milk_composition.py  stats_production.py  stats_runner.py  stats_temporal.py  validate_db.py  viz_base.py  viz_breakpoints.py  viz_correlation.py  viz_longitudinal.py  viz_milk_composition.py  viz_production.py  viz_runner.py  viz_temporal.py
tests/: test_imports.py  test_stats.py
