[build-system]
requires = ["setuptools >= 68.0", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "digimuh"
version = "0.1.0"
description = "DigiMuh — dairy cow sensor data ingestion and analysis toolkit"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Bart R. H. Geurten", email = "bart.geurten@otago.ac.nz"},
]
keywords = [
    "dairy", "cattle", "sensor", "sqlite", "precision-livestock",
    "animal-science", "smaxtec", "herdeplus",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = []

[project.optional-dependencies]
analysis = [
    "pandas",
    "numpy",
    "matplotlib",
    "scipy",
    "scikit-learn",
]
dev = [
    "pytest >= 7.0",
    "sphinx >= 7.0",
    "sphinx-rtd-theme",
    "tqdm",
    "pandas",
    "numpy",
    "matplotlib",
    "scipy",
    "scikit-learn",
]
progress = [
    "tqdm",
]

[project.scripts]
digimuh-ingest = "digimuh.ingest_cow_db:main"
digimuh-broken-stick = "digimuh.analysis_00_broken_stick:main"
digimuh-extract = "digimuh.analysis_00a_extract:main"
digimuh-stats = "digimuh.analysis_00b_stats:main"
digimuh-plots = "digimuh.analysis_00c_plots:main"
digimuh-ketosis = "digimuh.analysis_01_ketosis:main"
digimuh-heat = "digimuh.analysis_03_heat_stress:main"
digimuh-digestive = "digimuh.analysis_06_digestive:main"
digimuh-circadian = "digimuh.analysis_11_circadian:main"
digimuh-entropy = "digimuh.analysis_12_motility_entropy:main"
digimuh-validate = "digimuh.validate_db:main"

[project.urls]
Repository = "https://github.com/zerotonin/digimuh"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
